--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,7 +1,24 @@
 @import './base.css';
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz@9..40&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Borel&family=DM+Sans:opsz@9..40&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Borel&family=Caprasimo&family=DM+Sans:opsz@9..40&family=Shrikhand&display=swap');
+
 body {
   background: linear-gradient(135deg, rgb(243, 198, 255) , rgb(189, 242, 255) , rgb(253, 255, 206));
 }
+
+.font-dm {
+  font-family: 'DM Sans', sans-serif;
+}
+
+.font-borel {
+  font-family: 'Borel', cursive;
+}
+
+.font-cp {
+  font-family: 'Caprasimo', cursive;
+}
+
 /* #app {
   max-width: 1280px;
   margin: 0 auto;
