--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -40,7 +40,29 @@ body {
     font-size: 45px;
   }
   
+ 
 }
+
+@media (max-width: 767px) {
+  /* Styles for mobile devices */
+  .crop {
+    width: 150px;
+    height: 150px;
+  }
+
+  .name {
+    font-size: 20px;
+  }
+
+  .course {
+    font-size: 10px;
+  }
+
+  .teacherid {
+    font-size: 13px;
+  }
+}
+
 
 .font-noto {
   font-family: 'Noto Serif', serif;
