--- a/src/assets/nprogess.css
+++ b/src/assets/nprogess.css
@@ -3,14 +3,14 @@
   }
   
   #nprogress .bar {
-    background: green;
+    background: rgb(252, 58, 255);
     position: fixed;
     z-index: 1031;
     top: 0;
     left: 0;
   
     width: 100%;
-    height: 10px;
+    height: 3px;
   }
   /* Fancy blur effect */
   #nprogress .peg {
@@ -19,7 +19,7 @@
     right: 0px;
     width: 100px;
     height: 100%;
-    box-shadow: 0 0 10px green, 0 0 5px green; /* Changed to green */
+    box-shadow: 0 0 10px rgb(252, 58, 255), 0 0 5px rgb(252, 58, 255);
     opacity: 1.0;
   
     -webkit-transform: rotate(3deg) translate(0px, -4px);
@@ -42,8 +42,8 @@
     box-sizing: border-box;
   
     border: solid 2px transparent;
-    border-top-color: green; /* Changed to green */
-    border-left-color: green; /* Changed to green */
+    border-top-color: rgb(252, 58, 255); 
+    border-left-color: rgb(252, 58, 255); 
     border-radius: 50%;
   
     -webkit-animation: nprogress-spinner 400ms linear infinite;
