--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -54,6 +54,10 @@ body {
   
 }
 
+.notfound {
+  height: 180px;
+}
+
 @media (max-width: 767px) {
   /* Styles for mobile devices */
   .crop {
@@ -72,7 +76,10 @@ body {
   .teacherid {
     font-size: 13px;
   }
-  
+  .notfound {
+    height: 100px;
+  }
+
   /* .list {
     height: 10px;
   } */
